highlight basic information

--- a/src/app/cv-main/sidebar/sidebar.component.html
+++ b/src/app/cv-main/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="ui segment">
-    <div class="ui list">
+    <div class="ui list" style="font-weight: 700">
       <div class="item">
         <i class="inverted primary circular home icon"></i>
         <div class="content">
