Add linkedIn information

--- a/src/app/cv-main/sidebar/sidebar.component.html
+++ b/src/app/cv-main/sidebar/sidebar.component.html
@@ -32,6 +32,12 @@
         </div>
       </div>
       <div class="item">
+        <i class="inverted primary circular linkedin icon"></i>
+        <div class="content">
+          <a [href]="basics?.linkedIn?.url">{{basics?.linkedIn?.username}}</a>
+        </div>
+      </div>
+      <div class="item">
         <i class="inverted primary circular github icon"></i>
         <div class="content">
           <a [href]="basics?.github?.url">github.com/{{basics?.github?.username}}</a>
