Make more space for content in sidebar

--- a/src/app/cv-main/sidebar/sidebar.component.html
+++ b/src/app/cv-main/sidebar/sidebar.component.html
@@ -54,7 +54,7 @@
   </div>
 
   <div *ngIf="skills && skills.length > 0" class="ui segment">
-    <h2 class="ui header">
+    <h2 class="ui header" style="margin-bottom: 1.5rem">
       Skills
     </h2>
     <div *ngFor="let skill of skills" class="ui primary small progress">
