Make some space for bigger content

--- a/src/app/cv-main/content-item/content-item.component.html
+++ b/src/app/cv-main/content-item/content-item.component.html
@@ -1,12 +1,12 @@
 <div class="ui grid">
 
   <div class="three wide column sidebar">
-    {{contentItem?.date}}
+    <span class="date">{{contentItem?.date}}</span>
   </div>
 
-  <div class="thirteen wide column" style="padding-left: 0;">
+  <div class="thirteen wide column">
 
-    <div class="ui inline small header">
+    <div class="ui inline tiny header">
       {{contentItem?.title}}
     </div>
 
