fix css for avatar

--- a/src/app/cv-main/sidebar/sidebar.component.scss
+++ b/src/app/cv-main/sidebar/sidebar.component.scss
@@ -12,7 +12,8 @@
 
 .ui.circular.image {
     border: 1px solid lightgray;
-    max-width: 150px;
+    width: 160px;
+    height: 160px;
     margin: auto;
 }
 
