Use div instead of img

--- a/src/app/cv-main/sidebar/sidebar.component.html
+++ b/src/app/cv-main/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="ui segments">
 
-  <div class="ui segment">
-    <img class="ui medium circular image" src="/assets/cv-main/avatar.png">
+  <div class="ui segment center aligned">
+    <div class="ui medium circular image" [style.background-image]="'url(/assets/cv-main/avatar.png)'"></div>
   </div>
 
   <div class="ui center aligned segment">
