--- a/src/app/cv-main/sidebar/sidebar.component.scss
+++ b/src/app/cv-main/sidebar/sidebar.component.scss
@@ -14,7 +14,8 @@
     border: 1px solid lightgray;
     width: 160px;
     height: 160px;
-    margin: auto;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .ui.header {
