--- a/src/app/cv-project/project/project.component.html
+++ b/src/app/cv-project/project/project.component.html
@@ -18,7 +18,7 @@
   <span></span>
 </div>
 <div class="description">
-  <p>{{project?.description}}</p>
+  <p [innerHtml]="project?.description"></p>
 </div>
 <div class="extra">
   <div *ngFor="let keyword of project?.keywords" class="ui horizontal label">{{keyword}}</div>
