Add view source label for open source projects

--- a/src/app/cv-project/project/project.component.html
+++ b/src/app/cv-project/project/project.component.html
@@ -13,6 +13,7 @@
   <a *ngIf="project?.github" class="github right-floated" href="{{project.github}}" target="blank">
     <i class="fitted github icon"></i>
   </a>
+  <div *ngIf="project?.github" class="ui right-floated tiny right pointing basic label">View source</div>
 </div>
 <div class="meta">
   <span></span>
