Introduce new "skills" section for project details

--- a/src/app/cv-project/cv-project.component.html
+++ b/src/app/cv-project/cv-project.component.html
@@ -17,6 +17,10 @@
       </div>
     </div>
 
+    <div *ngIf="i == 0" class="ui vertical segment">
+      <app-skills [skills]="skills"></app-skills>
+    </div>
+
     <div *ngFor="let project of projectList" class="ui vertical segment">
       <app-project [project]="project"></app-project>
     </div>
