--- a/src/app/cv-project/cv-project.component.html
+++ b/src/app/cv-project/cv-project.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div *ngIf="i == 0" class="ui vertical segment">
-      <app-skills [skills]="skills"></app-skills>
+      <app-skills [skills]="skills" [tasks]="tasks"></app-skills>
     </div>
 
     <div *ngFor="let project of projectList" class="ui vertical segment">
