--- a/src/app/cv-project/skills/skills.component.html
+++ b/src/app/cv-project/skills/skills.component.html
@@ -13,11 +13,10 @@
   <div class="eight wide column">
     <div class="ui info message">
       <div class="header">
-        Was this what you wanted?
+        Project description
       </div>
       <ul class="list">
-        <li>It's good to see you again.</li>
-        <li>Did you know it's been a while?</li>
+        <li *ngFor="let task of tasks">{{task}}</li>
       </ul>
     </div>
   </div>
